[gd_scene load_steps=4 format=2]

[ext_resource path="res://pickable/Pickable.tscn" type="PackedScene" id=1]
[ext_resource path="res://seaside/ufo/Ufo.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 7.09677 )

[node name="Ufo" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
scale = Vector2( 0.354204, 0.237889 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="FishSlot" type="Position2D" parent="." index="2"]
position = Vector2( -7.11696, 13.1102 )

[node name="FishSlot2" type="Position2D" parent="." index="3"]
position = Vector2( 0.374573, 13.4848 )

[node name="FishSlot3" type="Position2D" parent="." index="4"]
position = Vector2( 6.74239, 13.4848 )
